Update of Anitas Kitcen

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=devive-width">
     <meta name="author" content="Simpo Symmon">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <script src="https://use.fontawesome.com/5c3db0c522.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
-
 
     <section id="showcase">
       <div class="container">
@@ -16,46 +19,115 @@
 
 
       </div>
-    </section>
-    <section id="box">
-      <div class="image"
-        <h2>Breakfast</h2>
-      </div>
-    </section>
-    <section id="box">
-      <div class="image"
-        <h2>Lunch</h2>
-      </div>
-    </section>
-    <section id="box">
-      <div class="image"
-        <h2>Dinner</h2>
-      </div>
-    </section>
 
-    <section id="newsletter">
+    </section>
+     <div class="container">
+    <div class="row">
+        <div class="col-md-3">
+           <div class="one1">
+             <h2>Happy Hour</h2>
+           </div>
+           <div class="two">
+             <h2>Party Time</h2>
+           </div>
+        </div>
+        <div class="col-md-3">
+           <div class="one">
+             <div class="breakfast">
+               <h2>Breakfast</h2>
+             </div>
+           </div>
+        </div>
+        <div class="col-md-3">
+           <div class="one">
+            <div class="lunch">
+              <h2>Lunch</h2>
+            </div>
+           </div>
+        </div>
+        <div class="col-md-3">
+           <div class="one">
+            <div class="dinner">
+              <h2>Dinner</h2>
+             </div>
+          </div>
+        </div>
+        <div class="fastfood">
+        <div class="col-md-6">
+
+             <div class="img-thumbnail">
+               <img src="ip2/assets/fastFood1.jpg" >
+               <img src="ip2/assets/fastFood2.jpg" >
+             </div>
+           </div>
+
+        <div class="col-md-6">
+           <div class="data pull-right">
+              <h2>Fast Food</h2>
+              <h3>You ll Love our delicious Fast Food</h3>
+              <p>Sed ut molestie risus, non lacinia nisl. Proin tempus, risus ut bibendum tristique,
+                mauris mauris cursus lectus, id egestas quam sem sit amet velit.
+                Cras at bibendum turpis. Interdum et malesuada fames ac ante ipsum primis in faucibus.<br>Quisque sit amet semper sem. Duis porttitor ac mauris ut varius. Nunc volutpat tincidunt odio, in consectetur nibh eleifend sit amet. Etiam id nulla elit. Vestibulum dignissim odio sit amet augue ornare, a dapibus mauris condimentum. Curabitur bibendum sapien massa, sit amet pretium mi vehicula vitae. Nam consectetur elit vel ligula venenatis, sit amet vehicula tellus placerat. Curabitur iaculis arcu ac tellus rhoncus consequat. Fusce at odio eget mauris fringilla ultrices.</p>
+            </div>
+            <div class="form-group">
+
+              <a href="#" class="btn btn-warning">  VIEW GALLEYS    <span class="glyphicon glyphicon-arrow-right"></span></a>
+            </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="fastfood">
+        <div class="col-md-6">
+           <div class="data pull-right">
+              <h2>Drinks</h2>
+              <h3>We also produce delicious drinks</h3>
+              <p>Sed ut molestie risus, non lacinia nisl. Proin tempus, risus ut bibendum tristique,
+                mauris mauris cursus lectus, id egestas quam sem sit amet velit.
+                Cras at bibendum turpis. Interdum et malesuada fames ac ante ipsum primis in faucibus.<br>Quisque sit amet semper sem. Duis porttitor ac mauris ut varius. Nunc volutpat tincidunt odio, in consectetur nibh eleifend sit amet. Etiam id nulla elit. Vestibulum dignissim odio sit amet augue ornare, a dapibus mauris condimentum. Curabitur bibendum sapien massa, sit amet pretium mi vehicula vitae. Nam consectetur elit vel ligula venenatis, sit amet vehicula tellus placerat. Curabitur iaculis arcu ac tellus rhoncus consequat. Fusce at odio eget mauris fringilla ultrices.</p>
+            </div>
+            <div class="form-group">
+
+              <a href="#" class="btn btn-warning">  VIEW GALLEYS    <span class="glyphicon glyphicon-arrow-right"></span></a>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+
+             <div class="img-thumbnail">
+               <img src="ip2/assets/drink1.jpg" >
+               <img src="ip2/assets/drink2.jpg" >
+             </div>
+           </div>
+      </div>
+
+    </div>
+  </div>
+   <section id="newsletter">
       <div class="container">
       <div>
-        <h1>Subscribe To Our Newsletter</h1>
+        <h1>Get your daily foof items delivered to your mail</h1>
         <form>
-          <input type ="email" placeholder="Enter Email....">
-          <button type="submit" class = "button_1">Subcribe</button>
+          <input type ="email" placeholder="Your Email....">
+
+            <a href="#" class="btn btn-warning">  Subscribe    </a>
         </form>
       </div>
       </div>
-    </section>
 
     </section>
     <footer>
-      <p>That what we are</p>
-      <a target="_blank" title="follow me on twitter" href="http://www.twitter.com/Simpo254">
-        <img alt="follow me on twitter" src="./ip2/assets/footerlogos/index.jpeg" border=0></a>
-        <a target="_blank" title="find us on Facebook" href="http://www.facebook.com/Simpo ">
-          <img alt="follow me on facebook" src="./ip2/assets/footerlogos/fb_logo.jpeg" border=0></a>
-        <a href="marcusgathii2011@gmail.com">
-          <a target = "_blank" title ="send an email" src "./ip2/assets/footerlogos/email.png">
-      <p>2016 menu restaurant</p>
+      <img src="ip2/assets/footerlogos/logo_white.png" >
+      <p>Thats What We Are</p>
+        <a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+        <a href="#"><i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
+        <img  class="img-rounded" src="ip2/assets/footerlogos/email.png" width="20" height="20"  alt="">
+      <p> Copyright &copy; menu restaurant</p>
     </footer>
+
+
+
 
   </body>
 </html>
