--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=devive-width">
     <meta name="author" content="Simpo Symmon">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <script src="https://use.fontawesome.com/5c3db0c522.js"></script>
+
     <script src="js/jquery.js"></script>
-    <script src="js/scripts.js"></script>
+    <script> src = "js/bootstrap.js"</script>
+    <script src="js/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   </head>
   <body>
 
@@ -56,7 +62,7 @@
         <div class="fastfood">
         <div class="col-md-6">
 
-             <div class="img-thumbnail">
+             <div class="img-thumbnail" width="490" height="200">
                <img src="ip2/assets/fastFood1.jpg" >
                <img src="ip2/assets/fastFood2.jpg" >
              </div>
@@ -65,7 +71,7 @@
         <div class="col-md-6">
            <div class="data pull-right">
               <h2>Fast Food</h2>
-              <h3>You ll Love our delicious Fast Food</h3>
+              <h3>You 'll Love our delicious Fast Food</h3>
               <p>Sed ut molestie risus, non lacinia nisl. Proin tempus, risus ut bibendum tristique,
                 mauris mauris cursus lectus, id egestas quam sem sit amet velit.
                 Cras at bibendum turpis. Interdum et malesuada fames ac ante ipsum primis in faucibus.<br>Quisque sit amet semper sem. Duis porttitor ac mauris ut varius. Nunc volutpat tincidunt odio, in consectetur nibh eleifend sit amet. Etiam id nulla elit. Vestibulum dignissim odio sit amet augue ornare, a dapibus mauris condimentum. Curabitur bibendum sapien massa, sit amet pretium mi vehicula vitae. Nam consectetur elit vel ligula venenatis, sit amet vehicula tellus placerat. Curabitur iaculis arcu ac tellus rhoncus consequat. Fusce at odio eget mauris fringilla ultrices.</p>
@@ -100,7 +106,7 @@
 
         <div class="col-md-6">
 
-             <div class="img-thumbnail">
+             <div class="img-thumbnail" >
                <img src="ip2/assets/drink1.jpg" >
                <img src="ip2/assets/drink2.jpg" >
              </div>
@@ -109,10 +115,91 @@
 
     </div>
   </div>
+
+    <div id="mainContainer" class="carousel">
+      <div class="container">
+        <div class="panel panel-default">
+           <div class="panel-heading">
+             
+             <div class="row">
+               <div class="col-md-3">
+                      <h2>FastFood</h2>
+               </div>
+               <div class="col-md-3">
+                      <h2>Drinks</h2>
+               </div>
+               <div class="col-md-3">
+                      <h2>Chicken</h2>
+               </div>
+               <div class="col-md-3">
+                      <h2>Rice</h2>
+                  </div>
+             </div>
+
+
+           </div>
+            <div class="panel-body">
+              <div class="container">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+
+          <div class="item active">
+            <img src="ip2/assets/fastfood/beefBurger.jpg" alt="Chania" width="460" height="345">
+            <div class="carousel-caption">
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="ip2/assets/fastfood/beefBurger.jpg" alt="Chania" width="460" height="345">
+            <div class="carousel-caption">
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="ip2/assets/fastfood/chickenPizza.jpg" alt="Flower" width="460" height="345">
+            <div class="carousel-caption">
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="ip2/assets/fastfood/chickenBurger.jpg" alt="Flower" width="460" height="345">
+            <div class="carousel-caption">
+            </div>
+          </div>
+
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+            </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
+  </div>
    <section id="newsletter">
       <div class="container">
       <div>
-        <h1>Get your daily foof items delivered to your mail</h1>
+        <h1>Get your daily food items delivered to your mail</h1>
         <form>
           <input type ="email" placeholder="Your Email....">
 
@@ -123,7 +210,10 @@
 
     </section>
     <footer>
-      <img src="ip2/assets/footerlogos/logo_white.png" >
+      <div class="logo">
+        <img src="ip2/assets/footerlogos/logo_white.png" float left >
+        <h1>MENU</h1>
+        </div>
       <p>Thats What We Are</p>
         <a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
         <a href="#"><i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
