--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="container">
         <div class="panel panel-default">
            <div class="panel-heading">
-             
+
              <div class="row">
                <div class="col-md-3">
                       <h2>FastFood</h2>
@@ -149,6 +149,7 @@
 
           <div class="item active">
             <img src="ip2/assets/fastfood/beefBurger.jpg" alt="Chania" width="460" height="345">
+            <p>Beefburger</p>
             <div class="carousel-caption">
             </div>
           </div>
@@ -161,12 +162,14 @@
 
           <div class="item">
             <img src="ip2/assets/fastfood/chickenPizza.jpg" alt="Flower" width="460" height="345">
+            <p>Chickenpizza</p>
             <div class="carousel-caption">
             </div>
           </div>
 
           <div class="item">
             <img src="ip2/assets/fastfood/chickenBurger.jpg" alt="Flower" width="460" height="345">
+            <p>Chicken bu</p>
             <div class="carousel-caption">
             </div>
           </div>
@@ -187,6 +190,61 @@
             </div>
         </div>
       </div>
+    </div>
+    <div id="Happy" class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <h2>Happy Customers</h2>
+          <h3>George Richard</h3>
+          <p>Great Food! Menu is awesome the foogs are not only greatbut alco in the right price.
+          i ll highly recommend them</p>
+          <div class="container">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="ip2/assets/customers/p1.png" >
+      </div>
+
+      <div class="item">
+        <img src="ip2/assets/customers/p2.png" >
+      </div>
+
+
+      <div class="item">
+        <img src="ip2/assets/customers/p3.png" >
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+        </div>
+        <div class="col-md-4">
+          <h2>About Menu</h2>
+          <p>We  are menu a litlle team of 7 menbers Sed ut molestie risus, non lacinia nisl.
+             Proin tempus, risus ut bibendum tristique, mauris mauris cursus lectus,
+             id egestas quam sem sit amet velit. Cras at bibendum turpis.
+             Interdum et malesuada fames ac ante ipsum primis in faucibus.
+             Quisque sit amet semper sem. Duis porttitor ac mauris ut varius</p>
+
+        </div>
+
+
+      </div>
+
     </div>
 
 
